<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_perm_identity"
            android:title="@string/menu_customers" />
        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/ic_assignment_ind"
            android:title="@string/menu_employees" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_shopping_cart"
            android:title= "@string/menu_sales" />
        <item
            android:id="@+id/nav_fertilizer"
            android:icon="@drawable/ic_monetization"
            android:title="@string/menu_fertilizer" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_content_paste"
            android:title="@string/menu_report" />
    </group>

    <item android:title="Información">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title= "@string/menu_info" />
        </menu>
    </item>

</menu>
